# cloud-notes

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  README.md  build.gradle.kts  build.zig  build.zig.zon  haskell-app.cabal  main.odin  package.json  settings.gradle.kts
.quarkus/: README.md
.quarkus/cli/plugins/: quarkus-cli-catalog.json
app/: Main.hs
client/: input-processing.odin  tailwind.config.js  vite.config.ts
client/src/: App.tsx  main.tsx  style.css
client/src-tauri/: tauri.conf.json
client/src/components/: App.tsx  OptionNavigator.tsx
client/src/components/add/: AddTab.tsx
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: haskell-app-0.1.0.0-inplace.conf  package.cache
gui_client_app/: vite.config.ts
gui_client_app/src/: style.css
gui_client_app/src-tauri/: tauri.conf.json
gui_client_app/src/components/: OptionNavigator.tsx
server/: README.md  build.gradle.kts  gleam.toml  manifest.toml  pom.xml  settings.gradle.kts
server/src/: note.gleam  server.gleam
server/src/requests/: requests_manager.gleam  url_resolver.gleam
server/test/: server_test.gleam
src/: App.tsx  MyLib.hs  frontend.tsx  index.css  index.html  index.ts  main.clj
src/components/: AddNote.tsx  Footer.tsx  NotesList.tsx  SearchNote.tsx
src/images/logo/: head-snippet.html  site.webmanifest
src/types/: Note.ts  NoteType.ts  NoteVersion.ts
test/: MainTest.hs
tests/: test-example.odin
(+45 files in other folders)
